@@ -13,16 +13,21 @@ import com.edward.cook_craft.mapper.RecipeMapper;
 import com.edward.cook_craft.mapper.RecipeStepMapper;
 import com.edward.cook_craft.model.*;
 import com.edward.cook_craft.repository.*;
+import com.edward.cook_craft.service.batch.RecipeViewService;
 import com.edward.cook_craft.service.minio.MinioService;
 import com.edward.cook_craft.utils.JsonUtils;
+import com.edward.cook_craft.utils.RecipeUtils;
 import com.edward.cook_craft.utils.SecurityUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.repository.query.Param;
 import org.springframework.data.util.Pair;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -50,8 +55,8 @@ public class RecipeService {
     private final MinioService minioService;
     private final RecipeIngredientDetailMapper recipeIngredientDetailMapper;
     private final RecipeStepMapper recipeStepMapper;
-    private final FavoriteRepository favoriteRepository;
-    private final ReviewRepository reviewRepository;
+    private final RecipeUtils recipeUtils;
+    private final RecipeViewService recipeViewService;
 
     public List<RecipeResponse> getAll() {
         return repository.findAll().stream()
@@ -66,30 +71,19 @@ public class RecipeService {
         Integer status = request.getStatus() == null ? EntityStatus.ACTIVE.getStatus() : request.getStatus();
         boolean sortByFavorite = pageable.getSort().stream()
                 .anyMatch(order -> order.getProperty().equalsIgnoreCase("favorite"));
-        List<Recipe> data;
+        Page<Recipe> paged;
         if (sortByFavorite) {
-            data = repository.filterWithFavorite(
+            paged = repository.filterWithFavorite(
                     keyword, categoryIds, ingredientIds, authorUsernames, status, PageRequest.of(pageable.getPageNumber(), pageable.getPageSize())
             );
         } else {
-            data = repository.filter(
+            paged = repository.filter(
                     keyword, categoryIds, ingredientIds, authorUsernames, status, pageable);
         }
-        List<RecipeResponse> response = data.stream().map(recipeMapper::toResponse).toList();
-        List<Long> recipeIds = data.stream().map(Recipe::getId).toList();
+        List<Recipe> data = paged.getContent();
+        var response = recipeUtils.mapWithExtraInfo(data);
 
-        var ratingMap = getRatingMap(recipeIds);
-        var favoriteMap = checkFavoriteByUser(recipeIds);
-        var totalFavoriteMap = checkTotalFavoriteForRecipe(recipeIds);
-
-        response.forEach(r -> {
-            r.setIsFavorite(favoriteMap.get(r.getId()));
-            r.setAverageRating(ratingMap.get(r.getId()).getFirst());
-            r.setTotalReview(ratingMap.get(r.getId()).getSecond());
-            r.setTotalFavorite(totalFavoriteMap.get(r.getId()));
-        });
-
-        return pageMapper.map(response, pageable, response.size());
+        return pageMapper.map(response, pageable, paged.getTotalElements());
     }
 
     public RecipeDetailResponse details(Long id) {
@@ -98,17 +92,7 @@ public class RecipeService {
             throw new CustomException("recipe.not.found");
         }
         Recipe recipeData = recipe.get();
-        RecipeDetailResponse response = new RecipeDetailResponse(recipeMapper.toResponse(recipeData));
-        List<Long> recipeIds = List.of(id);
-        var favoriteMap = checkFavoriteByUser(recipeIds);
-        var ratingMap = getRatingMap(recipeIds);
-        var totalFavoriteMap = checkTotalFavoriteForRecipe(recipeIds);
-
-        response.setIsFavorite(favoriteMap.get(id));
-        response.setAverageRating(ratingMap.get(id).getFirst());
-        response.setTotalReview(ratingMap.get(id).getSecond());
-        response.setTotalFavorite(totalFavoriteMap.get(response.getId()));
-
+        RecipeDetailResponse response = new RecipeDetailResponse(recipeUtils.mapWithExtraInfo(List.of(recipeData)).get(0));
 
         List<RecipeIngredientDetail> recipeIngredients = recipeIngredientDetailRepository.findByRecipeId(id);
         var recipeIngredientResponses = recipeIngredients.stream()
@@ -119,6 +103,10 @@ public class RecipeService {
 
         response.setRecipeIngredients(recipeIngredientResponses);
         response.setRecipeSteps(recipeStepResponses);
+
+        //Increase view of this recipe
+        recipeViewService.increaseView(id);
+
         return response;
     }
 
@@ -136,6 +124,7 @@ public class RecipeService {
         } else {
             recipe.setImgUrl(defaultRecipe);
         }
+
         Recipe finalRecipe = repository.save(recipe);
 
         var savedIngredients = ingredients.stream().map(i -> {
@@ -165,9 +154,13 @@ public class RecipeService {
 
     @Transactional
     public RecipeResponse update(String jsonRequest, MultipartFile file) {
+        User user = SecurityUtils.getCurrentUser();
+        if (user == null) {
+            throw new CustomException("not.authenticated");
+        }
         RecipeRequest request = JsonUtils.jsonMapper(jsonRequest, RecipeRequest.class);
         validateRecipeRequest(request);
-        if (!Objects.equals(SecurityUtils.getCurrentUsername(), request.getAuthorUsername())) {
+        if (!Objects.equals(user.getUsername(), request.getAuthorUsername())) {
             throw new CustomException("you.are.not.authorized");
         }
         Recipe recipe = repository.getByIdAndActive(request.getId()).get();
@@ -314,52 +307,5 @@ public class RecipeService {
         }
     }
 
-    private Map<Long, Boolean> checkFavoriteByUser(List<Long> recipeIds) {
-        User u = SecurityUtils.getCurrentUser();
-        if (u == null) {
-            return recipeIds.stream().collect(Collectors.toMap(id -> id, id -> false));
-        }
-        Map<Long, Boolean> favoriteMap = favoriteRepository.findAllFavoriteByUserIdAndRecipeIds(u.getId(), recipeIds)
-                .stream()
-                .collect(Collectors.toMap(Favorite::getRecipeId, f -> true));
 
-        recipeIds.forEach(id -> favoriteMap.computeIfAbsent(id, k -> false));
-
-        return favoriteMap;
-    }
-
-    private Map<Long, Pair<Float, Integer>> getRatingMap(List<Long> recipeIds) {
-        var ratingMap = reviewRepository.findByRecipeIdIn(recipeIds)
-                .stream()
-                .collect(Collectors.groupingBy(
-                        Review::getRecipeId,
-                        Collectors.collectingAndThen(
-                                Collectors.toList(),
-                                reviews -> {
-                                    double sum = reviews.stream()
-                                            .mapToDouble(review -> review.getRating() != null ? review.getRating() : 0.0)
-                                            .sum();
-                                    int count = reviews.size();
-                                    double average = count > 0 ? sum / count : 0.0;
-                                    return Pair.of((float) average, count);
-                                }
-                        )
-                ));
-        recipeIds.forEach(id -> ratingMap.computeIfAbsent(id, k -> Pair.of(0.0f, 0)));
-
-        return ratingMap;
-    }
-
-    private Map<Long, Integer> checkTotalFavoriteForRecipe(List<Long> recipeIds) {
-        List<FavoriteRepository.RecipeLikeCount> counts = favoriteRepository.countLikesGroupByRecipeIdByRecipeIds(recipeIds);
-
-        var totalFavoriteMap = counts.stream()
-                .collect(Collectors.toMap(
-                        FavoriteRepository.RecipeLikeCount::getRecipeId,
-                        FavoriteRepository.RecipeLikeCount::getLikeCount
-                ));
-        recipeIds.forEach(id -> totalFavoriteMap.putIfAbsent(id, 0));
-
-        return totalFavoriteMap;
-    }
 }
